Bug #14156 Fix the vuln by defined a dedicated attribute in AuthenticationCredentials for authentication successfully performed outside of Silverpeas.