@@ -28,20 +28,10 @@ import org.silverpeas.core.admin.user.model.UserDetail;
 import org.silverpeas.core.security.authentication.Authentication;
 import org.silverpeas.core.security.authentication.AuthenticationCredential;
 import org.silverpeas.core.security.authentication.AuthenticationService;
-import org.silverpeas.core.security.authentication.exception
-    .AuthenticationNoMoreUserConnectionAttemptException;
-import org.silverpeas.core.security.authentication.exception
-    .AuthenticationUserMustAcceptTermsOfService;
-import org.silverpeas.core.security.authentication.verifier.AuthenticationUserVerifierFactory;
-import org.silverpeas.core.security.authentication.verifier.UserCanLoginVerifier;
-import org.silverpeas.core.security.authentication.verifier.UserCanTryAgainToLoginVerifier;
-import org.silverpeas.core.security.authentication.verifier.UserMustAcceptTermsOfServiceVerifier;
-import org.silverpeas.core.security.authentication.verifier.UserMustChangePasswordVerifier;
-import org.silverpeas.core.util.Charsets;
-import org.silverpeas.core.util.ResourceLocator;
-import org.silverpeas.core.util.SettingBundle;
-import org.silverpeas.core.util.StringUtil;
-import org.silverpeas.core.util.URLUtil;
+import org.silverpeas.core.security.authentication.exception.AuthenticationNoMoreUserConnectionAttemptException;
+import org.silverpeas.core.security.authentication.exception.AuthenticationUserMustAcceptTermsOfService;
+import org.silverpeas.core.security.authentication.verifier.*;
+import org.silverpeas.core.util.*;
 import org.silverpeas.core.util.logging.SilverLogger;
 import org.silverpeas.core.web.http.HttpRequest;
 import org.silverpeas.core.web.mvc.webcomponent.SilverpeasHttpServlet;
@@ -55,7 +45,6 @@ import javax.servlet.http.HttpServletResponse;
 import javax.servlet.http.HttpSession;
 import java.io.IOException;
 import java.io.Serializable;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.util.Map;
 
@@ -63,11 +52,12 @@ import static java.text.MessageFormat.format;
 
 /**
  * This servlet listens for incoming authentication requests for Silverpeas.
- *
+ * <p>
  * This servlet delegates the authentication process and the HTTP session opening in Silverpeas to
  * the corresponding services. If the authentication and the session opening succeed, the user
  * behind the authentication ask is redirected to its user home page. Otherwise, he's redirected to
  * an authentication failure page (that can the login page enriched with an error message).
+ * </p>
  */
 public class AuthenticationServlet extends SilverpeasHttpServlet {
 
@@ -95,8 +85,6 @@ public class AuthenticationServlet extends SilverpeasHttpServlet {
    *
    * @param servletRequest the HTTP request.
    * @param response the HTTP response.
-   * @throws IOException when an error occurs while processing the request or sending the response.
-   * @throws ServletException if the request for the POST couldn't be handled.
    */
   @Override
   public void doPost(HttpServletRequest servletRequest, HttpServletResponse response) {
@@ -208,7 +196,7 @@ public class AuthenticationServlet extends SilverpeasHttpServlet {
       final AuthenticationParameters authenticationParameters,
       final UserCanTryAgainToLoginVerifier userCanTryAgainToLoginVerifier)
       throws ServletException, IOException {
-    String url = "";
+    String url;
     HttpSession session = request.getSession();
     if (authenticationParameters.isCasMode()) {
       url = "/admin/jsp/casAuthenticationError.jsp";
@@ -322,7 +310,7 @@ public class AuthenticationServlet extends SilverpeasHttpServlet {
   }
 
   private void storeLogin(HttpServletResponse response, AuthenticationParameters params) {
-    if (!isAnonymousAuthentication(params)) {
+    if (isNotAnonymousAuthentication(params)) {
       String sLogin = params.getLogin();
       boolean secured = params.isSecuredAccess();
       if (params.isNewEncryptionMode()) {
@@ -336,7 +324,7 @@ public class AuthenticationServlet extends SilverpeasHttpServlet {
   }
 
   private void storeDomain(HttpServletResponse response, AuthenticationParameters params) {
-    if (!isAnonymousAuthentication(params)) {
+    if (isNotAnonymousAuthentication(params)) {
       String sDomainId = params.getDomainId();
       boolean secured = params.isSecuredAccess();
       writeCookie(response, "defaultDomain", sDomainId, -1, secured);
@@ -344,9 +332,9 @@ public class AuthenticationServlet extends SilverpeasHttpServlet {
     }
   }
 
-  private boolean isAnonymousAuthentication(AuthenticationParameters params) {
+  private boolean isNotAnonymousAuthentication(AuthenticationParameters params) {
     User anonymous = UserDetail.getAnonymousUser();
-    return anonymous != null && anonymous.getLogin().equals(params.getLogin());
+    return anonymous == null || !anonymous.getLogin().equals(params.getLogin());
   }
 
   private String authenticate(HttpServletRequest request,
@@ -357,16 +345,16 @@ public class AuthenticationServlet extends SilverpeasHttpServlet {
           authenticationParameters.getLogin());
       if (authenticationParameters.isUserByInternalAuthTokenMode() || authenticationParameters.
           isSsoMode() || authenticationParameters.isCasMode()) {
-        key = authService.authenticate(
-            credential.withAsDomainId(authenticationParameters.getDomainId()));
+        credential.withAsDomainId(authenticationParameters.getDomainId())
+            .setRemotelyAuthenticated();
       } else if (authenticationParameters.isSocialNetworkMode()) {
-        key = authService.authenticate(credential.withAsDomainId(authenticationParameters.
-            getDomainId()));
+        credential.withAsDomainId(authenticationParameters.getDomainId())
+            .setRemotelyAuthenticated();
       } else {
-        key = authService.authenticate(credential
-            .withAsPassword(authenticationParameters.getPassword())
-            .withAsDomainId(authenticationParameters.getDomainId()));
+        credential.withAsPassword(authenticationParameters.getPassword())
+            .withAsDomainId(authenticationParameters.getDomainId());
       }
+      key = authService.authenticate(credential);
       authenticationParameters.setCredential(credential);
       HttpSession session = request.getSession(false);
       for (Map.Entry<String, Serializable> capability : credential.getCapabilities().entrySet()) {
@@ -393,13 +381,7 @@ public class AuthenticationServlet extends SilverpeasHttpServlet {
 
   private void writeCookie(HttpServletResponse response, String name, String value, int duration,
       boolean secure) {
-    String cookieValue;
-    try {
-      cookieValue = URLEncoder.encode(value, Charsets.UTF_8.name());
-    } catch (UnsupportedEncodingException ex) {
-      logger.error(ex.getMessage(), ex);
-      cookieValue = value;
-    }
+    String cookieValue = URLEncoder.encode(value, Charsets.UTF_8);
     Cookie cookie = new Cookie(name, cookieValue);
     cookie.setSecure(secure);
     cookie.setMaxAge(duration);
